# hello-world

./: .env  Cargo.toml
cli_app/: Cargo.toml
cli_app/src/: api.rs  commands.rs  lib.rs  main.rs  model.rs  settings.rs  state.rs
cli_app/src/api/: errors.rs  handlers.rs  model.rs  v1.rs
cli_app/src/api/handlers/: hello.rs  posts.rs
cli_app/src/api/response/: posts.rs
cli_app/src/commands/: hello.rs  serve.rs
cli_app/src/service/: post_service.rs
hello_main/: Cargo.toml
hello_main/src/: main.rs
