[workspace]
resolver = "3"
members = ["hello_main", "cli_app"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8"
tokio = "1.35"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
rand = "0.9"
tower-http = "0.6"
clap = "4.0"
config = "0.15"
dotenv = "0.14"
arc-swap = "1.7"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"
