[package]
name = "cli_app"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
config.workspace = true
dotenv.workspace = true
axum.workspace = true

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tokio]
workspace = true
features = ["full"]
