[package]
name = "hello_main"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rand.workspace = true

[dependencies.tokio]
workspace = true
features = [ "full" ]

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.tower-http]
workspace = true
features = ["catch-panic"]
